manifests/perry-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perry-staging
  namespace: perry-staging
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - perry-staging.techtronics.top
  rules:
    - host: perry-staging.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: perry-staging
                port:
                  number: 8000
